[package]
name = "dota_stalker"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "rt", "macros", "rt-multi-thread", "io-util"] }
serenity = { version = "0.11", default-features = false, features = ["builder", "cache", "collector", "client", "gateway", "http", "model", "utils", "rustls_backend", "unstable_discord_api", "chrono"] }
rmp-serde = "1.1.0"
rusty_ulid = "1.0"
bytes = "1.2"
httparse = "1.8.0"
dota-gsi = { git = "https://github.com/benrstraw/dota-gsi", branch = "pub_fields" }